descriptions for outcome types and specialist roles

--- a/frameworks/digital-outcomes-and-specialists/questions/services/agileCoach.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/agileCoach.yml
@@ -12,3 +12,5 @@ questions:
   - agileCoachDayRate
 
 empty_message: You haven't added an agile coach
+
+hint: Help individuals, teams and managers be as effective as possible by embedding an agile culture.
