--- a/frameworks/digital-outcomes-and-specialists/questions/services/communicationsManager.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/communicationsManager.yml
@@ -12,3 +12,5 @@ questions:
   - communicationsManagerDayRate
 
 empty_message: You haven't added a communications manager
+
+hint: Develop user-focused messages, measurement techniques and communication approaches. Establish integrated communication plans across a range of digital channels to ensure that communication is ongoing, open and clear.
