--- a/frameworks/digital-outcomes-and-specialists/questions/services/contentDesigner.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/contentDesigner.yml
@@ -12,3 +12,5 @@ questions:
   - contentDesignerDayRate
 
 empty_message: You haven't added a content designer
+
+hint: Ensure content is as clear and simple as possible to meet user needs.
