--- a/frameworks/digital-outcomes-and-specialists/questions/services/designer.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/designer.yml
@@ -12,3 +12,5 @@ questions:
   - designerDayRate
 
 empty_message: You haven't added a designer
+
+hint: Set up a team for successful delivery. Remove obstacles, track progress, facilitate meetings and help the team organise itself.
