--- a/frameworks/digital-outcomes-and-specialists/questions/services/developer.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/developer.yml
@@ -12,3 +12,5 @@ questions:
   - developerDayRate
 
 empty_message: You haven't added a developer
+
+hint: Build software that supports user needs. Continually improve the service by identifying new tools and techniques, removing technical bottlenecks, and adapting and maintaining code.
