--- a/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalyst.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/performanceAnalyst.yml
@@ -12,3 +12,5 @@ questions:
   - performanceAnalystDayRate
 
 empty_message: You haven't added a performance analyst
+
+hint: Specify, collect and present the key performance data and analysis for a service.
