--- a/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManager.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManager.yml
@@ -12,3 +12,5 @@ questions:
   - portfolioManagerDayRate
 
 empty_message: You haven't added a portfolio manager
+
+hint: Lead a digital portfolio of projects and programmes.
