--- a/frameworks/digital-outcomes-and-specialists/questions/services/productManager.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/productManager.yml
@@ -12,3 +12,5 @@ questions:
   - productManagerDayRate
 
 empty_message: You haven't added a product manager
+
+hint: Lead the delivery and continuous improvement of one or more digital products or platforms.
