--- a/frameworks/digital-outcomes-and-specialists/questions/services/qualityAssurance.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/qualityAssurance.yml
@@ -12,3 +12,5 @@ questions:
   - qualityAssuranceDayRate
 
 empty_message: You haven't added a quality assurance analyst
+
+hint: Ensure the quality of the digital service by testing it manually and writing automated tests covering a range of conditions.
