--- a/frameworks/digital-outcomes-and-specialists/questions/services/deliveryManager.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/deliveryManager.yml
@@ -12,3 +12,5 @@ questions:
   - deliveryManagerDayRate
 
 empty_message: You haven't added a delivery manager
+
+hint: Set up a team for successful delivery. Remove obstacles, track progress, facilitate meetings and help the team organise itself.
