--- a/frameworks/digital-outcomes-and-specialists/questions/services/serviceManager.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/serviceManager.yml
@@ -12,3 +12,5 @@ questions:
   - serviceManagerDayRate
 
 empty_message: You haven't added a service manager
+
+hint: Develop and deliver an effective user-focused digital service. Manage the full product lifecycle, including user research, design, delivery and continuous improvement.
