--- a/frameworks/digital-outcomes-and-specialists/questions/services/userResearcher.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/userResearcher.yml
@@ -12,3 +12,5 @@ questions:
   - userResearcherDayRate
 
 empty_message: You haven't added a user researcher
+
+hint: Design, conduct and analyse user research using a range of techniques, eg one-to-one interviews or usability tests. 
