--- a/frameworks/digital-outcomes-and-specialists/questions/services/webOperations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/webOperations.yml
@@ -12,3 +12,5 @@ questions:
   - webOperationsDayRate
 
 empty_message: You haven't added a web operations engineer
+
+hint: Run the production systems to help the development team build software that is easy to operate, scale and secure.
