--- a/frameworks/digital-outcomes-and-specialists/questions/services/businessAnalyst.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/businessAnalyst.yml
@@ -13,4 +13,4 @@ questions:
 
 empty_message: You haven't added a business analyst
 
-hint: Specify, collect and present key performance data and analysis for their service.
+hint: Analyse a service or organisation’s business processes and systems. Specify, collect and present findings.
