Update role description for designer
- doesn’t describe delivery manager
- mentions service and graphic design
- doesn’t mention specific tools

--- a/frameworks/digital-outcomes-and-specialists/questions/services/designer.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/designer.yml
@@ -13,4 +13,4 @@ questions:
 
 empty_message: You haven't added a designer
 
-hint: Set up a team for successful delivery. Remove obstacles, track progress, facilitate meetings and help the team organise itself.
+hint: Design interactions that support user needs. Provide service design and graphic design expertise. Skills include sketching, design production and rapid prototyping.
