update to description of designer capability

--- a/frameworks/digital-outcomes-and-specialists/questions/services/designer.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/designer.yml
@@ -13,4 +13,4 @@ questions:
 
 empty_message: You haven't added a designer
 
-hint: Design interactions that support user needs. Provide service design and graphic design expertise. Skills include sketching, design production and rapid prototyping.
+hint: Provide user-centred interaction design, service design and graphic design expertise.
