Add section descriptions for service declarations
We need to be clear about your answers to these questions.

Something like this was on the service page in the prototype, but this:
- makes more sense
- is more official

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_submission.yml
@@ -6,6 +6,10 @@
 
 - name: Service essentials
   editable: True
+  description: >
+    You must be able to truthfully answer ‘yes’ to every question  for your
+    bid to be considered eligible. If you can't answer ‘yes’ to every question
+    in this section, it's very unlikely that your bid will be accepted.
   questions:
     - helpGovernmentImproveServices
     - bespokeSystemInformation
@@ -14,6 +18,10 @@
 
 - name: User research participants essentials
   editable: True
+  description: >
+    You must be able to truthfully answer ‘yes’ to every question for your bid
+    to be considered eligible. If you can't answer ‘yes’ to every question in
+    this section, it's very unlikely that your bid will be accepted.
   questions:
     - anonymousRecruitment
     - manageIncentives
@@ -130,5 +138,4 @@
 - name: Location
   editable: True
   questions:
-    - recruitLocations 
-
+    - recruitLocations
