--- a/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
@@ -11,8 +11,8 @@ options:
   - label: "North West England"
   - label: "Yorkshire and the Humber"
   - label: "East Midlands"
-  - label: "The Midlands"
-  - label: "East England"
+  - label: "West Midlands"
+  - label: "East of England"
   - label: "Wales"
   - label: "London"
   - label: "South East England"
