Outcomes Off-site should be offsite

--- a/frameworks/digital-outcomes-and-specialists/questions/services/outcomesLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/outcomesLocations.yml
@@ -13,7 +13,7 @@ depends:
       - digital-outcomes
 type: checkboxes
 options:
-  - label: "Off-site"
+  - label: "Offsite"
   - label: "Scotland"
   - label: "North East England"
   - label: "North West England"
