--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/appropriateTradeRegistersNumber.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/appropriateTradeRegistersNumber.yml
@@ -1,2 +1,6 @@
 question: If you answered ‘yes’ to question [[appropriateTradeRegisters]], please provide details including your organisation’s registration number.
 type: text
+validations:
+  -
+    name: answer_required
+    message: You need to answer this question because you answered ‘yes’ to [[appropriateTradeRegisters]].
