--- a/frameworks/digital-outcomes-and-specialists/questions/declaration/licenceOrMemberRequiredDetails.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/declaration/licenceOrMemberRequiredDetails.yml
@@ -1,6 +1,5 @@
 question: If you answered ‘licensed’ or ‘a member of a relevant organisation’ in [[licenceOrMemberRequired]], please give details of the state's requirements and confirm whether you've met them.
 type: text
 validations:
-  -
-    name: answer_required
+  - name: answer_required
     message: You need to answer this question because you answered answered ‘licensed’ or ‘a member of a relevant organisation’ in [[licenceOrMemberRequired]].
