chaged link from blog to suppliers guide in homepage sidebar

--- a/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/homepage-sidebar.yml
@@ -42,4 +42,4 @@ open:
     [Create an account](/suppliers/create) or [log in](/suppliers/login) to apply.
 
 
-    [Find out if your services are suitable](https://digitalmarketplace.blog.gov.uk/2015/11/12/digital-outcomes-and-specialists-suitable-suppliers-and-services/)
+    [Find out how to apply](https://www.gov.uk/guidance/digital-outcomes-and-specialists-suppliers-guide)
