--- a/frameworks/digital-outcomes-and-specialists/questions/services/security.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/security.yml
@@ -11,3 +11,5 @@ questions:
   - securityTypes
 
 empty_message: You haven't added any security capabilities
+
+hint: Minimise the chance of data or information systems security breaches. Ensure information is protected against unauthorised or unintended access. Put systems in place to prevent data destruction or disruption.
