--- a/frameworks/digital-outcomes-and-specialists/questions/services/programmeManager.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/programmeManager.yml
@@ -12,3 +12,5 @@ questions:
   - programmeManagerDayRate
 
 empty_message: You haven't added a programme manager
+
+hint: Manage and organise groups of related projects so they work together to achieve a strategic objective.
