Change West England to South West England
https://www.pivotaltracker.com/story/show/110243076

--- a/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/agileCoachLocations.yml
@@ -17,7 +17,7 @@ options:
   - label: "Wales"
   - label: "London"
   - label: "South East England"
-  - label: "West England"
+  - label: "South West England"
   - label: "Northern Ireland"
 
 validations:
