--- a/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
@@ -16,6 +16,6 @@ options:
   - label: "Wales"
   - label: "London"
   - label: "South East England"
-  - label: "West England"
+  - label: "South West England"
   - label: "Northern Ireland"
   - label: "International (outside the UK)"
