--- a/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManagerLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/portfolioManagerLocations.yml
@@ -17,7 +17,7 @@ options:
   - label: "Wales"
   - label: "London"
   - label: "South East England"
-  - label: "West England"
+  - label: "South West England"
   - label: "Northern Ireland"
 
 validations:
