Add answer_required for outcomes locations
Add the validation message for outcomes locations as it is a required
field.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/outcomesLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/outcomesLocations.yml
@@ -27,3 +27,7 @@ options:
   - label: "South East England"
   - label: "South West England"
   - label: "Northern Ireland"
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
