Add lots to brief questions

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/additionalTerms.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/additionalTerms.yml
@@ -1,8 +1,14 @@
 name: Additional terms and conditions
 question: List any additional terms and conditions that are not included in the service contract
+optional: true
 hint: 'Optional'
 type: textbox_large
 max_length_in_words: 50
+depends:
+  - "on": "lot"
+    being:
+      - digital-outcomes
+      - digital-specialists
 validations:
   -
     name: under_50_words
