--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationType.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationType.yml
@@ -6,6 +6,11 @@ options:
   - label: "provide a case study or evidence of previous work"
   - label: "presentation"
   - label: "pitch"
+depends:
+  - "on": "lot"
+    being:
+      - digital-outcomes
+      - digital-specialists
 validations:
   -
     name: answer_required
