--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/workingArrangements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/workingArrangements.yml
@@ -3,6 +3,11 @@ question: Describe working arrangement preference
 hint: 'eg remote working preference or specific hours or days required'
 type: textbox_large
 max_length_in_words: 50
+depends:
+  - "on": "lot"
+    being:
+      - digital-outcomes
+      - digital-specialists
 validations:
   -
     name: answer_required
