--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/organisation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/organisation.yml
@@ -2,6 +2,11 @@ name: Organisation
 question: Organisation the work is for
 hint: 'eg Department of Work and Pensions or Goldsmiths, University of London'
 type: text
+depends:
+  - "on": "lot"
+    being:
+      - digital-outcomes
+      - digital-specialists
 validations:
   -
     name: answer_required
