--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/outcome.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/outcome.yml
@@ -1,14 +1,16 @@
-name: Specialist
-question: Do you need a digital specialist?
-type: radios
-options:
-  - label: "Yes"
-  - label: "No"
+name: Problem the outcome will need to solve
+question: Overview of the problem that the supplier needs to solve
+hint: 'This is so suppliers can quickly see what this brief is about.'
+type: textbox_large
+max_length_in_words: 50
 depends:
   - "on": "lot"
     being:
-      - digital-specialists
+      - digital-outcomes
 validations:
   -
     name: answer_required
     message: 'You need to answer this question.'
+  -
+    name: under_50_words
+    message: 'Your answer must be no more than 50 words.'
