--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -4,10 +4,10 @@
   questions:
     - organisation
 -
-  name: Specialist
+  name: Specialist Role
   editable: True
   questions:
-    - specialist
+    - specialistRole
 -
   name: Outcome
   editable: True
