Add a `Requirements title` question
The first question for building a brief needs to be a title that it can be referred to later.
Words taken from the prototype and agreed with Ralph.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -1,4 +1,9 @@
 -
+  name: Requirements title
+  editable: True
+  questions:
+    - title
+-
   name: Your organisation
   editable: True
   questions:
