Fix non-unique locations list
Someone forgot the West and had double Easts.

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/location.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/location.yml
@@ -7,12 +7,12 @@ options:
   - label: "North West England"
   - label: "Yorkshire and the Humber"
   - label: "East Midlands"
-  - label: "East Midlands"
+  - label: "West Midlands"
   - label: "East of England"
   - label: "Wales"
   - label: "London"
   - label: "South East England"
-  - label: "South East England"
+  - label: "South West England"
   - label: "Northern Ireland"
   - label: "Offsite"
 depends:
