--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/backgroundInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/backgroundInformation.yml
@@ -1,4 +1,4 @@
-name: Background Information
+name: Background information
 question: Why this work is being done
 hint: 'Describe the background to the problem or situation that prompted you to go ahead with this work.'
 type: textbox_large
