--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/currentTechnologies.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/currentTechnologies.yml
@@ -1,4 +1,4 @@
-name: Current Technologies
+name: Current technologies
 question: Current technologies and languages that need to be considered
 optional: true
 hint: 'Optional'
