--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationType.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationType.yml
@@ -1,4 +1,4 @@
-name: Type of evaluation
+name: Evaluating suppliers
 question: How do you want the shortlisted suppliers to demonstrate their proposed approach?
 type: checkboxes
 options:
