--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/expectedOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/expectedOutcomes.yml
@@ -1,5 +1,5 @@
-name: Expected Outcomes
-question: Expected Outcomes
+name: Expected outcomes
+question: Expected outcomes
 optional: true
 hint: |
   Optional
