--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/organisation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/organisation.yml
@@ -1,4 +1,4 @@
-name: Organisation
+name: Your organisation
 question: Organisation the work is for
 hint: 'eg Department of Work and Pensions or Goldsmiths, University of London'
 type: text
