--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/outcome.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/outcome.yml
@@ -1,4 +1,4 @@
-name: Problem the outcome will need to solve
+name: Outcome
 question: Overview of the problem that the supplier needs to solve
 hint: 'This is so suppliers can quickly see what this brief is about.'
 type: textbox_large
