--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/workingArrangements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/workingArrangements.yml
@@ -1,4 +1,4 @@
-name: Remote working arrangements
+name: Working arrangements
 question: Describe working arrangement preference
 hint: |
   Optional
