--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirements.yml
@@ -1,10 +1,9 @@
-name: Nice to have
+name: Nice-to-have requirements
 question: Nice-to-have requirements
+hint: |
   List your nice-to-have requirements as yes/no questions.
 
-
   Suppliers will be prioritised based on the number of questions they can answer 'yes' to.
-
 
   eg does your organisation have experience working with low technical experience users?
 list_item_name: 'nice-to-have requirement'
