--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/outcome.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/outcome.yml
@@ -14,3 +14,4 @@ validations:
   -
     name: under_50_words
     message: 'Your answer must be no more than 50 words.'
+empty_message: Add description
