--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/additionalTerms.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/additionalTerms.yml
@@ -13,3 +13,4 @@ validations:
   -
     name: under_50_words
     message: 'Your answer must be no more than 50 words.'
+empty_message: Add description
