--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/backgroundInformation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/backgroundInformation.yml
@@ -16,3 +16,4 @@ validations:
   -
     name: under_100_words
     message: 'Your answer must be no more than 100 words.'
+empty_message: Add description
