--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationType.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationType.yml
@@ -15,3 +15,4 @@ validations:
   -
     name: answer_required
     message: 'You need to answer this question.'
+empty_message: Choose evaluation types
