--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/startDate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/startDate.yml
@@ -14,3 +14,4 @@ validations:
   -
     name: under_character_limit
     message: "Your start date must be no more than 100 characters."
+empty_message: Set date
