--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/title.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/title.yml
@@ -15,3 +15,4 @@ validations:
   -
     name: under_character_limit
     message: "Your title must be no more than 100 characters."
+empty_message: Add title
