Brief responses should be all in one section
Because all questions have to be responded to on a single page.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
@@ -1,30 +1,10 @@
 -
-  name: Essential requirements
+  name: Apply to an opportunity
   editable: True
   questions:
     - essentialRequirements
--
-  name: Nice-to-have requirements
-  editable: True
-  questions:
     - niceToHaveRequirements
--
-  name: Availability
-  editable: True
-  questions:
     - availability
--
-  name: Day rate
-  editable: True
-  questions:
     - dayRate
--
-  name: Specialist name
-  editable: True
-  questions:
     - specialistName
--
-  name: User participant response
-  editable: True
-  questions:
     - userParticipantResponse
