--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
@@ -12,5 +12,5 @@ depends:
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: 'You need to answer all the nice-to-have requirement questions.'
 empty_message: Respond to nice-to-have requirements
