Update brief-response questions
- Add `£` unit to day rate question
- Add `smaller` field to our psuedo date field
- Add a missing question mark

--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availability.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/availability.yml
@@ -2,6 +2,7 @@ name: Availability
 question: When would your specialist be available for work?
 hint: 'eg 01/01/2016'
 type: text
+smaller: true
 depends:
   - "on": "lot"
     being:
