--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
@@ -1,5 +1,5 @@
 name: Essential requirements
-question: Do you fulfill the following essential requirements
+question: Do you fulfill the following essential requirements?
 hint: 'If you cannot meet all requirements, you will not be eligible for this work.'
 type: boolean_list
 depends:
