Add ID field to service questions
Question IDs usually come from the filename, but for some cases:
  * G-Cloud serviceTypes
  * DOS locations

 We want to be able to specify the ID to use, different from the filename of the question.

--- a/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/recruitLocations.yml
@@ -1,3 +1,4 @@
+id: locations
 question: Where can you recruit participants from?
 hint: "[View regions](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
 depends:
