Location options differ for participants lot
Participants has `International` rather than the `Offsite` that outcomes and specialists has.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -7,7 +7,8 @@
   name: Location
   editable: True
   questions:
-    - location
+    - locationOutcomesSpecialists
+    - locationParticipants
 -
   name: Specialist role
   editable: True
