--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/locationParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/locationParticipants.yml
@@ -1,5 +1,7 @@
 name: Location
-question: Where will the work be carried out?
+id: location
+question: Where should participants be recruited from?
+hint: "[View regions](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
 type: radios
 options:
   - label: "Scotland"
@@ -14,12 +16,10 @@ options:
   - label: "South East England"
   - label: "South West England"
   - label: "Northern Ireland"
-  - label: "Offsite"
+  - label: "International (outside the UK)"
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
-      - digital-specialists
       - user-research-participants
 validations:
   -
