Update the location keys for displaying briefs

--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
@@ -3,7 +3,8 @@
   questions:
     - startDate
     - contractLength
-    - location
+    - locationOutcomesSpecialists
+    - locationParticipants
     - outcome
 -
   name: About the work
@@ -13,7 +14,8 @@
     - userNeeds
     - phase
     - workingArrangements
-    - location
+    - locationOutcomesSpecialists
+    - locationParticipants
     - importantDates
     - successCriteria
 -
