--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/locationParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/locationParticipants.yml
@@ -1,7 +1,7 @@
 name: Location
 id: location
 question: Where should participants be recruited from?
-hint: "[View regions](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
+hint: "[View regions (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
 type: radios
 options:
   - label: "Scotland"
