--- a/frameworks/digital-outcomes-and-specialists/questions/services/outcomesLocations.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/services/outcomesLocations.yml
@@ -8,7 +8,7 @@ question: >
 
 
   You can update the regions where you can provide services when the framework is live.
-hint: "[View regions](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
+hint: "[View regions (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)"
 depends:
   - "on": lot
     being:
