--- a/frameworks/g-cloud-7/questions/declaration/PR2.yml
+++ b/frameworks/g-cloud-7/questions/declaration/PR2.yml
@@ -1,2 +1,2 @@
-question: Do you accept the framework terms and conditions as set out in the Attachment 3 Framework Agreement and Call-Off Contract documents in [the supplier pack](/suppliers/frameworks/g-cloud-7/g-cloud-7-supplier-pack.zip)?
+question: "Do you accept the framework terms and conditions as set out in the Attachment 3 Framework Agreement and Call-Off Contract documents in [the supplier pack (ZIP, 4.3MB)](/suppliers/frameworks/g-cloud-7/g-cloud-7-supplier-pack.zip)?"
 type: boolean
