--- a/frameworks/g-cloud-7/questions/declaration/SQC2.yml
+++ b/frameworks/g-cloud-7/questions/declaration/SQC2.yml
@@ -1,2 +1,2 @@
-question: Do you accept the declaration of compliance as described in Attachment 5 of [the supplier pack](/suppliers/frameworks/g-cloud-7/g-cloud-7-supplier-pack.zip)?
+question: "Do you accept the declaration of compliance as described in Attachment 5 of [the supplier pack (ZIP, 4.3MB)](/suppliers/frameworks/g-cloud-7/g-cloud-7-supplier-pack.zip)?"
 type: boolean
