--- a/frameworks/g-cloud-8/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-8/messages/homepage-sidebar.yml
@@ -3,4 +3,4 @@ pending:
   heading: 'G‑Cloud 8 is closed for applications'
   messages:
     - 'Applications are being reviewed.'
-    - 'G‑Cloud 8 services will be available from SOME TIME IN 2016.'
+    - 'G‑Cloud 8 services will be available from 23 August 2016.'
