--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/essentialRequirements.yml
@@ -7,6 +7,7 @@ depends:
     being:
       - digital-outcomes
       - digital-specialists
+      - user-research-participants
 validations:
   -
     name: answer_required
