--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/niceToHaveRequirements.yml
@@ -8,6 +8,7 @@ depends:
     being:
       - digital-outcomes
       - digital-specialists
+      - user-research-participants
 validations:
   -
     name: answer_required
