--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirements.yml
@@ -13,6 +13,7 @@ depends:
     being:
       - digital-outcomes
       - digital-specialists
+      - user-research-participants
 validations:
   -
     name: answer_required
