--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirements.yml
@@ -14,6 +14,7 @@ depends:
     being:
       - digital-outcomes
       - digital-specialists
+      - user-research-participants
 validations:
   -
     name: answer_required
