Add respondToEmailAddress question to brief responses

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
@@ -2,6 +2,7 @@
   name: Apply to an opportunity
   editable: True
   questions:
+    - respondToEmailAddress
     - essentialRequirements
     - niceToHaveRequirements
     - availability
