--- a/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/output_brief_response.yml
@@ -1,6 +1,8 @@
 -
+  name: View response to requirements
   questions:
     - supplierName
     - availability
     - dayRate
     - niceToHaveRequirements
+    - respondToEmailAddress
