Add criteria weighting questions to the brief manifest

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -91,3 +91,13 @@
   editable: True
   questions:
     - evaluationType
+
+- name: Criteria weighting
+  editable: True
+  questions:
+    - culturalWeightingOutcomesSpecialists
+    - culturalWeightingParticipants
+    - priceWeightingOutcomesSpecialists
+    - priceWeightingParticipants
+    - technicalWeightingOurcomesSpecialists
+    - technicalWeightingParticipants
