--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalWeightingOurcomesSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalWeightingOurcomesSpecialists.yml
@@ -19,5 +19,5 @@ validations:
     message: 'You need to answer this question.'
   - name: not_a_number
     message: 'Weighting must be a number between 10 and 75.'
-  - name: total_is_100
+  - name: total_should_be_100
     message: 'Total must add up to 100%.'
